# sarasa

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pypi.yaml  tests_and_lint.yaml  yaml.pypi
configs/: example.py  example.toml  example.yaml  llama1b.py  llama3-1b.py
sarasa/: __init__.py  activation_checkpoint.py  amp.py  checkpoint.py  config.py  distributed_utils.py  evaluate.py  float8.py  low_recision.py  metrics.py  quantize.py  train.py  trainer.py  utils.py
sarasa/data/: __init__.py  download.py  hf_datasets.py  tokenizer.py  utils.py
sarasa/models/: __init__.py  attention.py  base.py  llama3.py  nanochat_gpt.py  utils.py
sarasa/optimizers/: __init__.py  hyperball_optimizer.py  utils.py
tests/: test_config.py  test_data.py  test_model.py  test_model_meta.py
