[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "sarasa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "rich>=14.2.0",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.2",
    "torch>=2.10.0",
    "tyro>=1.0.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
